# ze-brands-demo

./: .coverage  .dockerignore  .editorconfig  .env  .env.deploy  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  README_DEPLOY_LOCAL.md  README_DEPLOY_PROD.md  docker-compose.yml  pyproject.toml  ruff.toml  task-def.json  task-def.raw.json  task-def.tpl.json
coverage/: coverage.xml
documentation/: LOCAL.postman_environment.json  ZeBrands_Catalog_API.postman_collection.json  openapi.yml
env/: local.env  prod.env  sandbox.env
migrations/: 20250906_01__create_brands_table.sql  20250906_02__create_products_table.sql  20250906_03__create_user_role_enum.sql  20250906_04__create_users_table.sql  20250906_05__create_product_views_table.sql
scripts/: build_and_push.sh  deploy_ecs.sh  entrypoint.prod.sh  entrypoint.sh  run_yoyo_migrations.py  wait_for_postgres.py
src/app/: main.py  openapi.py
src/app/application/: containers.py
src/app/application/api/users/: access.py  (+1 more)
src/app/application/handlers/: detail_error_response.py  error_response.py  exception_handlers.py
src/app/core/: configurations.py  container.py  role_checker.py  security.py  security_utils.py
src/app/domain/enums/: code_enum.py  role_enum.py
src/app/domain/exceptions/: credential_exception.py  data_validation_exception.py  resource_not_found_exception.py
src/app/domain/helpers/: datetime_generator.py  ulid_generator.py
src/app/domain/models/: brand.py  product.py  user.py
src/app/domain/repositories/: brand_repository.py  product_repository.py  product_view_repository.py  user_repository.py
src/app/domain/services/: notification_service.py  product_update_event.py
src/app/infrastructure/db/: database_repository.py  session.py
src/app/infrastructure/entity/: audit_entity.py  brand_entity.py  product_entity.py  product_view_entity.py  user_entity.py
tests/: conftest.py
tests/application/: test_main.py  test_openapi.py
tests/application/api/: test_it_access.py  test_it_brands.py  test_it_products.py  test_it_users.py
tests/application/handlers/: test_detail_error_response.py  test_error_response.py
tests/assets/tables/: 001_users.sql  002_brands.sql  003_products.sql  004_product_views.sql
tests/core/: test_container.py
tests/domain/helpers/: test_datetime_generator.py  test_ulid_generator.py
tests/domain/use_cases/: test_create_brand_use_case.py  test_create_product_use_case.py  test_create_user_use_case.py  test_product_detail_use_case.py  test_product_remove_use_case.py  test_product_update_use_case.py  test_product_view_report_use_case.py
tests/infrastructure/: test_postgres_brand_repository.py  test_postgres_product_repository.py  test_postgres_product_view_repository.py  test_postgres_user_repository.py
tests/infrastructure/db/: test_database_repository.py
(+49 files in other folders)
